--- a/app/views/landing/blog.html.erb
+++ b/app/views/landing/blog.html.erb
@@ -56,7 +56,7 @@
 <section class="container u-space-3 space-top-md-5 space-top-lg-4">
     <!-- Title -->
     <div class="w-md-100 w-lg-100 mb-9">
-        <h2 class="font-weight-normal text-center">Conseils et infos pour <span class="font-weight-semi-bold">Ouvrir une franchise</span></h2>
+        <h2 class="font-weight-normal">Conseils et infos pour <span class="font-weight-semi-bold">ouvrir une franchise</span></h2>
     </div>
     <!-- End Title -->
 
@@ -70,7 +70,7 @@
                 </div>
                 <small class="d-block text-secondary mb-1">March 20, 2018</small>
                 <h2 class="h5">
-                    <a href="single-article-classic.html">Remote workers, here's how to dodge distractions</a>
+                    <a href="blogPage">Remote workers, here's how to dodge distractions</a>
                 </h2>
                 <p>We've been working hard with our besties at Reuters to design a new reading experience for Reuters.com.</p>
             </div>
@@ -196,14 +196,14 @@
     <div class="footer-bar">
         <div class="container-fluid">
             <div class="row pl-7 pr-7 flex-wrap justify-content-center justify-content-lg-between align-items-center">
-                <div class="col-6">
+                <div class="col-12 col-lg-6 col-md-12 text-center text-lg-left">
                     <p class="footer-copyright">
                         Copyright © <a href="https://insiti.com/" target="_blank">inSiti </a> | 
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="http://www.insiti.co/" target="_blank"> inSiti Groupe</a>
                     </p>
                 </div>
 
-                 <div class="col-md-6 mt-md-0 text-center  text-md-right">
+                 <div class="col-12 col-lg-6 col-md-12 mt-md-0 text-center text-lg-right">
                     <!-- Social Networks -->
                     <ul class="list-inline">
                         <li class="list-inline-item">
