--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -373,14 +373,14 @@
     <div class="footer-bar">
         <div class="container-fluid">
             <div class="row pl-7 pr-7 flex-wrap justify-content-center justify-content-lg-between align-items-center">
-                <div class="col-6">
+                <div class="col-12 col-lg-6 col-md-12 text-center text-lg-left">
                     <p class="footer-copyright">
                         Copyright © <a href="https://insiti.com/" target="_blank">inSiti </a> | 
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="http://www.insiti.co/" target="_blank"> inSiti Groupe</a>
                     </p>
                 </div>
 
-                 <div class="col-md-6 mt-md-0 text-center  text-md-right">
+                 <div class="col-12 col-lg-6 col-md-12 mt-md-0 text-center text-lg-right">
                     <!-- Social Networks -->
                     <ul class="list-inline">
                         <li class="list-inline-item">
@@ -410,4 +410,3 @@
         </div><!-- .container -->
     </div><!-- .footer-bar -->
 </footer>
-
