--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -12,7 +12,7 @@
 
                     <div class="col-3 col-lg-9 d-flex justify-content-end align-content-center">
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
-                            <a href="landing/blog" target="_blank">Blog</a>
+                            <a href="landing/blog" target="#">Blog</a>
                             <div class="read-more">
                                 <a href="#" data-toggle="modal" data-target="#modalinSiti">INSCRIPTION</a>
                             </div>
@@ -34,12 +34,12 @@
                                     </div>
 
                                     <div class="mx-auto mb-2 w-80 text-center">
-                                        <a class="btn btn-connection text-connection w-80 mt-3" href="https://insiti.com/login" target="_blank">Connexion</a>
+                                        <a class="btn btn-connection text-connection w-80 mt-3" href="https://insiti.com/login/masterclass" target="_blank">Connexion</a>
                                     </div>
 
                                     <div class="text-center mt-1 mb-7">
                                         <span class="small text-muted">Pas encore inscrit?</span>
-                                        <a class="small" href="https://insiti.com/compte" target="_blank">M'inscrive gratuitement</a>
+                                        <a class="small" href="https://wwww.insiti.com/compte/masterclass" target="_blank">M'inscrive gratuitement</a>
                                     </div>
                                 </div>
                             </div>
