login and signup with source

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -34,12 +34,12 @@
                                     </div>
 
                                     <div class="mx-auto mb-2 w-80 text-center">
-                                        <a class="btn btn-connection text-connection w-80 mt-3" href="https://insiti.com/login/masterclass" target="_blank">Connexion</a>
+                                        <a class="btn btn-connection text-connection w-80 mt-3" href="https://insiti.com/login/source/masterclass" target="_blank">Connexion</a>
                                     </div>
 
                                     <div class="text-center mt-1 mb-7">
                                         <span class="small text-muted">Pas encore inscrit?</span>
-                                        <a class="small" href="https://wwww.insiti.com/compte/masterclass" target="_blank">M'inscrive gratuitement</a>
+                                        <a class="small" href="https://wwww.insiti.com/compte/source/masterclass" target="_blank">M'inscrive gratuitement</a>
                                     </div>
                                 </div>
                             </div>
