login and signup with source

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -39,7 +39,7 @@
 
                                     <div class="text-center mt-1 mb-7">
                                         <span class="small text-muted">Pas encore inscrit?</span>
-                                        <a class="small" href="https://wwww.insiti.com/compte/source/masterclass" target="_blank">M'inscrive gratuitement</a>
+                                        <a class="small" href="https://www.insiti.com/compte/source/masterclass" target="_blank">M'inscrive gratuitement</a>
                                     </div>
                                 </div>
                             </div>
